k8s/vault/vault-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  serviceName: vault
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: registry.connect.redhat.com/hashicorp/vault:latest

          ports:
            - name: http
              containerPort: 8200
            - name: https
              containerPort: 8201

          command: ["/bin/sh", "-c"]
          args:
            - |         
              echo "Iniciando Vault..."
              vault server -config=/vault/config -dev-root-token-id= -dev-listen-address=0.0.0.0:8200 -dev
              
          volumeMounts:
            - name: vault-data
              mountPath: /vault/data

  volumeClaimTemplates:
    - metadata:
        name: vault-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
