k8s/vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  clusterIP: None
  selector:
    app: vault
  ports:
    - port: 8200
