k8s/vault/vault-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
spec:
  to:
    kind: Service
    name: vault
  port:
    targetPort: 8200
